<resources>
    <string name="app_name">AIAD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account_empty">账户不能为空！</string>
    <string name="pwd_empty">密码不能为空！</string>
    <string name="change_filter">左右滑动切换滤镜</string>
    <string name="next">下一步</string>
    <string name="show_area">图片显示区域</string>
    <string name="login">登录</string>
    <string name="product_name">产品名称</string>
    <string name="advert">广告词</string>
    <string name="revise_icon">修改头像</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="tip_for_register">未注册账号？ 马上注册</string>
    <string name="tryout">试用</string>
    <string name="tip_for_preview">仅预览 登录后即可保存发布</string>
    <string name="personal_info">个人资料</string>
    <string name="icon">头像</string>
    <string name="account">账号</string>
    <string name="mail">邮箱</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="women">女</string>
    <string name="man">男</string>
    <string name="revise_sex">         修改性别</string>
    <string name="product_type_is">您产品的类型应该是：</string>
    <string name="fresh">清新</string>
    <string name="classical">复古</string>
    <string name="simplicity">简约</string>
    <string name="tip_for_choose_style">"——————请选择你需要的广告片风格——————</string>
    <string name="tip_for_choose_time">——————请选择你需要的广告片时长——————</string>
    <string name="settings">设置</string>
    <string name="tip_for_wifi_choose">仅在wifi环境下上传\下载视频</string>
    <string name="tip_for_save_article">自动保存我的作品到广告库</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="register">注册</string>
    <string name="reset_password">重置密码</string>
    <string name="set_password">请输入密码</string>
    <string name="input_again">请再次输入</string>
    <string name="tip_for_login_redirect">已有账号？ 立即登录</string>
    <string name="type0">类型0</string>
    <string name="tip_for_choose_others">若不是，请在下方选择：</string>
    <string name="cloth">衣帽鞋包</string>
    <string name="daily">日常用品</string>
    <string name="dressing">美妆饰品</string>
    <string name="snack">食物小吃</string>
    <string name="study">学习办公</string>
    <string name="electrical">数码电子</string>
    <string name="loading">加载中.</string>
    <string name="my_ad">我的广告</string>
    <string name="my_material">我的素材</string>
</resources>
