<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/process_2"
        app:srcCompat="@drawable/process_2" />

    <LinearLayout
        android:id="@+id/LinearLayout_Parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView3"
        android:gravity="center_vertical|center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/product_type_is" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/icon_book"
                android:gravity="center"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="@string/type0" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/tip_for_choose_others" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_cloth"
                    android:gravity="center"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/cloth"
                    android:textSize="10dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_shoe"
                    android:gravity="center"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/daily"
                    android:textSize="10dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_makeup"
                    android:gravity="center"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/dressing"
                    android:textSize="10dp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_snack"
                    android:gravity="center"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/snack"
                    android:textSize="10dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_book"
                    android:gravity="center"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/study"
                    android:textSize="10dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_other"
                    android:gravity="center"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/electrical"
                    android:textSize="10dp" />
            </RadioGroup>
        </LinearLayout>


        <Button
            android:id="@+id/buttonConfirm1"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/radioGroup1"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_bg"
            android:text="@string/next"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>