<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingHorizontal="20dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="47dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone_number_tv"
        app:layout_constraintStart_toEndOf="@+id/phone_number_tv" />


    <TextView
        android:id="@+id/pwd_tv"
        android:layout_width="47dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_tv" />

    <EditText
        android:id="@+id/pwd_et"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/pwd_tv"
        app:layout_constraintStart_toEndOf="@+id/pwd_tv" />

    <Button
        android:id="@+id/verification_code_btn"
        android:layout_width="99dp"
        android:layout_height="40dp"

        android:layout_marginStart="64dp"
        android:text="@string/send_verify_code"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintStart_toEndOf="@+id/editText" />

    <EditText
        android:id="@+id/img_verification_et"
        android:layout_width="188dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:text="请输入右边图形验证码"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/register_btn_sure"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_bg"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn_cancel" />

    <Button
        android:id="@+id/register_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:text="@string/tip_for_login_redirect"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_verification_et" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="请输入验证码"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd_tv" />

    <ImageView
        android:id="@+id/img_verification"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_verification_et"
        app:layout_constraintStart_toEndOf="@+id/img_verification_et"
        app:layout_constraintTop_toTopOf="@+id/img_verification_et"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg_gv" />

</android.support.constraint.ConstraintLayout>